package main.java.diagramme.Classes;

public class Interface {
}
