package main.java.diagramme.Classes;

public class Methode {
}
