package main.java.diagramme.Classes;

public interface Visible {
}
